--- a/website.html
+++ b/website.html
@@ -1,4 +1,7 @@
 <html>
+    <head>
+        <title>This is my first website </title>
+    </head>
     <body>
         <h1>This is an heading </h1>
         <p>This is a paragraph</p>
